--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 </head>
 
 <body>
-    <!-- <img src="../goujiuwang/php/js.json" alt=""> -->
+    <!-- <div class="1">
+        <li><img src="./images/zhen-icon.png" alt="">正品保证 放心购买</li>
+        <li><img src="./images/mian-icon.png" alt=""> 满100即享全国免邮费</li>
+        <li><img src="./images/pei-icon (1).png" alt="">破损包赔 售后无忧</li>
+        <li><img src="./images/phone-icon.png" alt="">APP下单更优惠</li>
+    </div> -->
 </body>
 
 </html>
